--- a/src/pages/notifications/notifications.scss
+++ b/src/pages/notifications/notifications.scss
@@ -14,6 +14,12 @@ page-notifications{
                     height: auto;
                     /*max-height: 120px!important;*/
                     /*min-height: 60px!important;*/
+                      ion-thumbnail {
+                      /*position: absolute;*/
+                      
+                      margin-left: 10px !important;
+
+                      }
                     .item-inner{
                         padding-right: 0px!important;  
                         border:0px !important;
@@ -28,7 +34,10 @@ page-notifications{
                                 /*position: absolute;*/
                                 float: right;
                                 right: 10px;
-                                margin-left: 10px;
+                                margin-left: 10px !important;
+
+                                
+
                                 /*margin-top: 10px;*/
                                 height: 50px;
                                 width: 50px;
