small modify on setting ion header bg

--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -81,7 +81,8 @@ page-settings {
                 height: 30px;
                 min-height: 30px;
                 border:0px !important;
-                margin-top:0px!important;
+                margin:0px!important;
+                background-color: transparent !important;
                 ion-label{
                     margin: 0px!important;
                     font-weight: 600;
