--- a/src/pages/messages/messages.scss
+++ b/src/pages/messages/messages.scss
@@ -8,10 +8,10 @@ page-messages {
                 ion-item{
                     border:0px !important;
                     border-bottom: 1px solid #ddd!important;
-                    padding:8px 10px 8px 10px!important;
+                    //padding:8px 10px 8px 10px!important;
                     font-size:14px!important;
                     color:#2d3e52!important;
-                    height: auto;
+                    //height: auto;
                     /*max-height: 120px!important;*/
                     /*min-height: 60px!important;*/
                     .item-inner{
@@ -21,8 +21,8 @@ page-messages {
 
                         ion-label{
                             /*margin-right: 60px !important;*/
-                            margin: 0px;
-                            height: 100%;
+                            //margin: 0px;
+                            //height: 100%;
 
                             ion-thumbnail{
                                 /*position: absolute;*/
