#2 modify on app styles and pages

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -6,6 +6,12 @@
     font-family: 'TypoGraphica';
     src:  url('../assets/fonts/TypoGraphica_demo.otf') format('opentype');
 }
+$primary: color($colors, primary);
+$secondary: color($colors, secondary);
+$light: color($colors, light);
+$dark: color($colors, dark);
+
+
 html[dir="rtl"] {
     body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
         font-family: 'JF-Flat'!important;
@@ -47,7 +53,10 @@ ion-navbar{
         }
     }
 }
-
+ion-navbar {
+    box-shadow: none !important;
+    border-bottom: 1px solid #EEEEEE
+}
 .action-sheet-container {
     padding: 0 10px;
 }
