--- a/src/pages/messages/messages.scss
+++ b/src/pages/messages/messages.scss
@@ -8,37 +8,21 @@ page-messages {
                 ion-item{
                     border:0px !important;
                     border-bottom: 1px solid #ddd!important;
-                    //padding:8px 10px 8px 10px!important;
                     font-size:14px!important;
                     color:#2d3e52!important;
-                    //height: auto;
-                    /*max-height: 120px!important;*/
-                    /*min-height: 60px!important;*/
+
+                    ion-thumbnail {
+                        margin: 8px !important;
+                        //background-image: radial-gradient(#FFFFFF, #B3B0B0) ;
+                        //border-radius: 5px;
+                    }
                     .item-inner{
                         padding-right: 0px!important;  
                         border:0px !important;
                         
 
                         ion-label{
-                            /*margin-right: 60px !important;*/
-                            //margin: 0px;
-                            //height: 100%;
-
-                            ion-thumbnail{
-                                /*position: absolute;*/
-                                float: right;
-                                right: 10px;
-                                margin-left: 10px;
-                                /*margin-top: 10px;*/
-                                height: 50px;
-                                width: 50px;
-                                min-height: 50px!important;
-                                min-width: 50px!important;
-                                img{
-                                    width: 100%;
-                                    height: 100%;
-                                }
-                            }
+                           
                             h2{
                                 margin-top: 0px;
                                 font-size: 14px;
