--- a/src/pages/notifications/notifications.scss
+++ b/src/pages/notifications/notifications.scss
@@ -7,47 +7,17 @@ page-notifications{
                 margin:1px 0px!important;
                 ion-item{
                     border:0px !important;
-                    border-bottom: 1px solid #ddd!important;
-                    padding:8px 10px 8px 10px!important;
                     font-size:14px!important;
                     color:#2d3e52!important;
                     height: auto;
-                    /*max-height: 120px!important;*/
-                    /*min-height: 60px!important;*/
-                      ion-thumbnail {
-                      /*position: absolute;*/
-                      
-                      margin-left: 10px !important;
-
-                      }
+                    ion-thumbnail {
+                        margin: 8px 8px 8px 0!important
+                    }
                     .item-inner{
-                        padding-right: 0px!important;  
-                        border:0px !important;
-
-
+                        border-bottom: 0 !important;
                         ion-label{
-                            /*margin-right: 60px !important;*/
-                            margin: 0px;
-                            height: 100%;
 
-                            ion-thumbnail{
-                                /*position: absolute;*/
-                                float: right;
-                                right: 10px;
-                                margin-left: 10px !important;
-
-                                
-
-                                /*margin-top: 10px;*/
-                                height: 50px;
-                                width: 50px;
-                                min-height: 50px!important;
-                                min-width: 50px!important;
-                                img{
-                                    width: 100%;
-                                    height: 100%;
-                                }
-                            }
+                            
                             h2{
                                 margin-top: 0px;
                                 font-size: 14px;
