--- a/src/pages/requests-tabs/requests-tabs.scss
+++ b/src/pages/requests-tabs/requests-tabs.scss
@@ -5,18 +5,20 @@ page-requests-tabs {
 
     .requests-tabs{
         .tabbar {
-            border: 0px!important;
+            top: 44px;
+bottom: auto!important;
+            padding: 8px;
+            /*border: 0px!important;
             top: 44px;
             bottom: auto!important;
             padding:7px 10px!important;
-            /*margin-top: 1px;*/
-            box-shadow: 0 1px 5px 2px rgba(0, 0, 0, 0.1)!important;
+            margin-top: 1px;*/
+            /*box-shadow: 0 1px 5px 2px rgba(0, 0, 0, 0.1)!important;
             -webkit-box-shadow: 0 1px 5px 2px rgba(0, 0, 0, 0.1)!important;
             -o-box-shadow: 0 1px 5px 2px rgba(0, 0, 0, 0.1)!important;
             -moz-box-shadow: 0 1px 5px 2px rgba(0, 0, 0, 0.1)!important;
-
+*/
             .tab-button{
-                padding: 8px;
                 padding: 8px 0px;
                 border:1px solid #20a7f6;
                 height:40px!important;
