--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,7 +23,10 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary: #20a7f6,
+
+  
+
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
@@ -73,6 +76,13 @@ $toolbar-wp-title-text-color: #20a7f6;
 $toolbar-wp-title-font-size:16px;
 $toolbar-ios-title-font-size:16px;
 $toolbar-md-title-font-size:16px;
+
+$segment-button-ios-border-color-activated: #488aff;
+$segment-button-ios-background-color: #fff;
+$segment-button-ios-text-color-activated: #fff;
+
+
+
 
 $tabs-background: #fff;
 $tabs-ios-tab-text-color: #666;
