--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -33,7 +33,7 @@ html[dir="ltr"] {
     border-bottom-color: transparent!important;
     box-shadow: none!important;
 }
-ion-navbar{
+/*ion-navbar{
     box-shadow: 0 1px 5px 2px rgba(0, 0, 0, 0.1)!important;
     -webkit-box-shadow: 0 1px 5px 2px rgba(0, 0, 0, 0.1)!important;
     -o-box-shadow: 0 1px 5px 2px rgba(0, 0, 0, 0.1)!important;
@@ -52,6 +52,11 @@ ion-navbar{
             display: none;
         }
     }
+}*/
+
+.item-ios, .item-md {
+        padding-left: 0 !important;
+
 }
 ion-navbar {
     box-shadow: none !important;
