--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -1,4 +1,8 @@
+
 page-settings {
+.item-ios {
+    padding-left: 10px !important;
+}
     ion-content{
         background-color:#f1f1f1!important;
 
@@ -97,10 +101,15 @@ page-settings {
                 height: 36px!important;
                 min-height: 36px!important;
                 line-height: 36px!important;
+                span {
+                    font-size: 14px;
+                    display: block;
+                    line-height: 36px;
 
+                }
                 .item-inner{
                     border-bottom:0px solid #ddd!important;
-                    padding: 0px!important;
+                    padding: 0px 8px!important;
                     color:#666;
 
                     ion-label{
@@ -114,29 +123,24 @@ page-settings {
 
                     }
                 }
-                ion-badge{
+                /*ion-badge{
                     left: 20px;
                     position: absolute;
                     top: 9px;
                     font-size: 12px;
                     padding: 2px 6px;
-                }
+                }*/
                 .inner-item{
-                    float: left;
-                    width: calc(100% - 25px);
-                    height: 100%;
-                    border-bottom:1px solid #ddd!important;
+                    display: flex;
+                    justify-content: space-between;
+                    //float: left;
+                    //width: calc(100% - 25px);
+                    //height: 100%;
+                    //border-bottom:1px solid #ddd!important;
                     font-size:14px;
                     line-height:36px!important;
 
-                    ion-icon{
-                        /*position: absolute;*/
-                        float: left;
-                        margin-left: 10px;
-                        margin-top: 10px!important;
-                        font-size: 14px;
-
-                    }
+                    
                 }
             }
         }
