--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -2,7 +2,7 @@ page-profile {
     ion-content{
         background-color:#f1f1f1!important;
         .inner-content{
-            margin: 10px;
+            //margin: 10px;
             .top-header{
                 background-color: #fff;
                 border-bottom: 1px solid #ddd;
@@ -16,8 +16,10 @@ page-profile {
                     margin-left: 0;
                     overflow: hidden;
                     /*                    margin-right: -5px;
-                                        margin-top: -5px;*/
-                    z-index:9999;
+                    
+                    margin-top: -5px;*/
+                    position: relative;
+                   // z-index:9999;
                     img{
                         width: 100%;
                         height: 100%;
@@ -31,8 +33,8 @@ page-profile {
                         width: 30px;
                         line-height:30px;
                         position: absolute;
-                        top: 100px;
-                        left: 16px;
+                        bottom: 5px;
+                        left: 6px;
                         z-index: 99999999;
                         ion-icon{
                             font-size: 28px;
@@ -46,9 +48,10 @@ page-profile {
                     background-image: linear-gradient(180deg, rgba(0,0,0,0) 0, rgba(0,0,0,0.5) 110%);
                     background-position: 50% 50%;
                     height: 120px;
-                    width: calc(100% - 20px);
+                    width:100%;
                     position: absolute;
-                    top: 10px;
+                    top: 0;
+                    left:0;
                     margin: auto;
                 }
                 ion-grid{
@@ -63,7 +66,6 @@ page-profile {
                                 margin: auto;
                                 height: 70px;
                                 margin-bottom: 10px;
-                                float: right;
                                 border-radius: 50%;
                                 overflow: hidden;
                                 width: 70px;
@@ -267,9 +269,6 @@ page-profile {
                                     font-size: 10px;
                                     color: #999;
                                 }
-                            }
-                            h3{
-
                             }
                             p{
                                 font-size: 12px; 
