--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,4 +1,9 @@
+
+
+
 page-home {
+     
+
     ion-header{
         height: 200px;
         background: #20a7f6;
@@ -54,7 +59,77 @@ page-home {
         background-color: #f1f1f1!important;
         /*position:relative!important;*/
         margin-top:0px!important;
+        #loader-holder {
+            position: absolute;
+            top: 50%;
+            left: calc(50% - 40px);
+            z-index: 9999;
+           box-shadow: 1px 1px #fff;
 
+            .loader {
+                    @keyframes moveBG {
+                      0% {
+                        background-position: 0
+                      }
+                      100% {
+                        background-position: 240px
+                      }
+                    }
+
+                    /*@-webkit-keyframes moveBG {
+                      0% {
+                        background-position: 0
+                      }
+                      100% {
+                        background-position: 240px
+                      }
+                    }*/
+
+
+                position: relative;
+                background-position: 0;
+                width: 80px;
+                height: 8px;
+                border-radius: 5px;
+                
+
+                background-image: linear-gradient(to left,
+                 #224269,
+
+                  #233447 20%,
+                   #80362d 20%,
+
+                 #80362d 40%,
+                 #f9432f 40%,
+
+                 #ff3f27 60%,
+                 #E0A31E 60%,
+
+                 #dba404 80%,
+                 #20a7f6 80%,
+                 #0E93E0 80%);
+                 
+                 -webkit-animation: moveBg 1s 0.1s forwards infinite;
+                overflow: hidden;
+                 &:after {
+                     position: absolute;
+                     height: 50%;
+                     width: 100%;
+                     top: 0;
+                     left: 0;
+                    background-color: rgba(255, 255, 255, 0.15);
+                    ;content: '';
+
+                 }
+
+                 &.animate {
+                     animation: moveBg 1s forwards 0.2s infinite;
+
+                 }
+
+
+            }
+        }
         ion-segment{
             box-shadow: 2px 2px 10px #c3c3c3;
 
@@ -142,9 +217,6 @@ page-home {
 }
 
 
-html[dir="ltr"] {
-
-}
 
 
 
