--- a/src/pages/subcategory/subcategory.scss
+++ b/src/pages/subcategory/subcategory.scss
@@ -1,132 +1,99 @@
+$thumbnail-height60:70px;
+
 /*.arabic{*/
-page-subcategory{
-    ion-header{
-        ion-navbar{
-            .back-button{
-                color: #20a7f6;
-                position: absolute;
-                left: 0px;
-                padding:5px 10px;
 
-                ion-icon{
-                    font-size:28px;  
-                }
-                .back-button-text{
-                    display: none;
-                }
-            }
+page-subcategory {
+  ion-header {
+    ion-toolbar {
+      height: 40px;
+      min-height: 40px;
+      .toolbar-background {
+        background: #e1e1e1;
+      }
+      ion-searchbar {
+        .searchbar-input {
+          background: #fff!important;
         }
-        ion-toolbar{
-            height:40px;
-            min-height:40px;
-            .toolbar-background{
-                background: #e1e1e1;
-            }
-            ion-searchbar{
-                .searchbar-input{
-                    background: #fff!important;
-                }
-            }
-        }
+      }
     }
-    ion-content{
-        background-color: #f1f1f1!important;
-
-        ion-list{
-            padding: 0px;
-            margin: 0px 0 32px 0!important;
-            ion-item{
-                background: transparent!important;
-                border: 0px!important;
-                margin: 1px 0!important;
-                padding: 0 0px!important;
-                /*height:46px;*/
-                .item-inner{
-                    padding:0 8px;
-                    background: #fff;
-                    border-bottom: 0px!important;
-
-                    ion-label{
-                        margin:5px;
-
-                        ion-thumbnail{
-                            float: right!important;
-                            margin-left: 15px;
-                            min-width: 36px!important;
-                            min-height: 36px!important;
-                            width: 36px!important;
-                            height: 36px!important;
-                            img{
-                                width: 100%!important;
-                                height: 100%!important;
-                            }
-                        }
-                        h2{
-                            margin: 0px;
-                            text-overflow: ellipsis;
-                            overflow: hidden;
-                            height: 36px;
-                            line-height: 36px;
-                            color: #666;
-                            font-size: 14px;
-                            margin-left: 20px;
-                        }
-                        ion-icon{
-                            color: #666;
-                            position: absolute;
-                            left: 16px;
-                            top: 5px;
-                            font-size: 14px;
-                            height: 36px;
-                            line-height: 36px;
-                        }
-
-                    }
-
-
-                }
-            }
+  }
+  ion-content {
+    background-color: #f1f1f1!important;
+    ion-list {
+      padding: 0px;
+      margin: 0px 0 32px 0!important;
+      ion-item {
+        margin-top: 8px;
+        height: $thumbnail-height60; // margin-bottom: 8px !important;
+        padding: 0px;
+        border: 0px!important;
+        border-bottom: 1px solid #eee !important;
+        ion-thumbnail {
+          width: $thumbnail-height60;
+          height: 100%;
+          margin: 0 !important;
+          img {
+            width: $thumbnail-height60 !important;
+            height: $thumbnail-height60 !important;
+          }
         }
+        ion-label {
+            @extend %flex-between;
+            align-items: center;
+            margin: 11px 8px !important;
 
+        }
+        .item-inner {
+          border-bottom: 0!important;
+          
+        }
+        h2 {
+          margin: 0px;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          height: 36px;
+          line-height: 36px;
+          color: #666;
+          
+        }
+      }
     }
+  }
 }
+
+
 /*}*/
 
-
 html[dir="ltr"] {
-    page-subcategory{
-        ion-content{
-            ion-list{
-                margin: 0px!important;
-                ion-item{
-                    .item-inner{
-                        ion-label{
-                            ion-thumbnail{
-                                float: left!important;
-                                margin-left: 0px;
-                                margin-right: 15px;
-                            }
-                            h2{
-                                margin: 0px;
-                                margin-right: 20px;
-                            }
-                            ion-icon{
-                                left: auto;
-                                right: 16px;
-                                top: 5px;
-                                transform: rotate( -180deg ); 
-                                -o-transform: rotate( -180deg ); 
-                                -moz-transform: rotate( -180deg ); 
-                                -webkit-transform: rotate( -180deg ); 
-                            }
-
-                        }
-
-
-                    }
-                }
+  page-subcategory {
+    ion-content {
+      ion-list {
+        margin: 0px!important;
+        ion-item {
+          .item-inner {
+            ion-label {
+              ion-thumbnail {
+                float: left!important;
+                margin-left: 0px;
+                margin-right: 15px;
+              }
+              h2 {
+                margin: 0px;
+                margin-right: 20px;
+              }
+              ion-icon {
+                left: auto;
+                right: 16px;
+                top: 5px;
+                transform: rotate( -180deg);
+                -o-transform: rotate( -180deg);
+                -moz-transform: rotate( -180deg);
+                -webkit-transform: rotate( -180deg);
+              }
             }
-
+          }
         }
+      }
     }
+  }
 }
