set login page to be root page and add ubzil loader to login page

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -5,6 +5,12 @@ page-login {
         background-size:cover;
         background-color: #20a7f6!important;
 
+.loader-holder {
+    min-height: 8px;
+    background-color: #fff;
+    position: absolute;
+    width: 100%;
+}
 
         .top-content{
             background-color: #fff;
