--- a/src/pages/get-location/get-location.scss
+++ b/src/pages/get-location/get-location.scss
@@ -1,6 +1,20 @@
 page-get-location{
     //direction: rtl!important;
+    ion-header {
+        ion-navbar {
+            ion-buttons {
+                &[end] {
+                    button {
+                        margin: 0 8px;
+                    }
+                }
+                button {
+                        transform: scale(1.5);
 
+                }
+            }
+        }
+    }
     ion-content {
           button {
 
