--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -192,7 +192,7 @@ page-profile {
         margin: 0px;
         ion-list-header {
           border: 0px!important;
-          padding: 0px!important;
+          padding: 0px 8px!important;
           margin: 0px!important;
           height: 34px;
           min-height: 34px;
@@ -203,7 +203,7 @@ page-profile {
             color: #999;
           }
           .add-reviews {
-            float: left;
+            margin: 0;
             height: 34px;
             line-height: 34px;
             h2 {
@@ -386,7 +386,7 @@ html[dir="ltr"] {
             margin: auto;
             margin-right: 0;
             .cover-cahnge {
-              right: 16px;
+              right: 6px;
               left: auto;
             }
           }
@@ -394,27 +394,17 @@ html[dir="ltr"] {
             margin-top: -40px;
             ion-row {
               ion-col {
-                .user-img {
-                  float: left;
-                }
+                
                 .change-img {
                   margin-top: -15px;
                   margin-left: 45px;
                   margin-right: auto;
                 }
-                .user-name {
-                  padding: 0px 10px;
-                  padding-right: 40px;
-                }
+                
                 .user-position {
-                  padding: 0px 10px;
-                  padding-right: 40px;
+                  padding: 0px ;
                 }
-                .setting-btn {
-                  top: 30px;
-                  right: 0px;
-                  left: auto;
-                }
+                
               }
             }
           }
@@ -423,11 +413,7 @@ html[dir="ltr"] {
           text-align: left;
         }
         ion-list {
-          ion-list-header {
-            .add-reviews {
-              float: right;
-            }
-          }
+          
           ion-item {
             .item-inner {
               ion-label {
