--- a/src/pages/places-modal/places-modal.scss
+++ b/src/pages/places-modal/places-modal.scss
@@ -5,6 +5,12 @@ page-places-modal {
         &.content {
             background-color: #f1f1f1
         }
+.loader-holder{
+    position: relative;
+    width: 100%;
+    height: 6px;
+    background-color: #fff;
+}
 
         ion-list {
             //padding-top: 16px;
